<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_background"
    android:padding="10dp"
    android:layout_margin="5dp">


    <TextView
        android:id="@+id/tv_ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:text="@string/app_dummy_text_long"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_ingredient_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_dummy_number"
            android:gravity="center_horizontal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ingredient_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/app_dummy_text_short"
            android:gravity="center_horizontal"
            android:textSize="12sp" />
    </LinearLayout>




</LinearLayout>