<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".activity.MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_welcome"
        android:layout_above="@+id/rv_recipe"
        android:layout_margin="8dp"
        android:layout_marginBottom="40dp"
        android:text="@string/welcome_text"
        android:visibility="invisible"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_connectionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/internet_error"
        android:textAlignment="center"

        android:visibility="invisible" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_connectionError"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/retry"

        android:visibility="invisible" />


</RelativeLayout>